name: gamma-boy
version: 0.1.0.0
-- synopsis:            
-- description:         
license: MIT
license-file: LICENSE
-- author:              
-- maintainer:          
-- copyright:           
category: Game
build-type: Simple
-- extra-source-files:  
cabal-version: >=1.10

executable gamma-boy
  main-is: Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends: base >=4.6 && <4.7
               , bytestring
               , array
               , mtl
  hs-source-dirs: src
  default-language: Haskell2010
